# htmxTunes

./: Cargo.toml  README.md  TODO.md  justfile
embed/: index.html  script.js
src/: main.rs
templates/: index.html
