[package]
name = "htmxTunes"
description = ""
homepage = ""
repository = ""
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"

axum = { version = "0.6.12", features = ["macros", "ws"] }
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
clap = { version = "4.2.1", features = ["derive"] }
rust-embed = { version = "6.6.1", features = ["axum-ex"] }
mime_guess = "2.0.4"
open = "4.0.2"
rand = "0.8.5"
sqlite = "0.30.4"

# bundling adds about 800kb to the binary size (Linux, release build)
[dependencies.sqlite3-src]
version = "0.4.0"
features = ["bundled"]

[profile.release]
lto = true      # Enable Link Time Optimization
opt-level = 'z' # Optimize for size.
panic = 'abort' # Abort on panic

# codegen-units = 1 # Set low to increase optimizations. Kills compile time though
# strip = true        # Strip symbols from binary. Big gains but idk if it's worth bad stack traces
